--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "_moduleAliases": {
+    "@components": "dist/features",
+    "@core": "dist/core",
+    "@domain": "dist/domain"
+  },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cookie-session": "^2.0.0",
@@ -22,6 +27,7 @@
     "express-async-errors": "^3.1.1",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.0",
+    "module-alias": "^2.2.3",
     "typescript": "^5.1.6",
     "uuid": "^9.0.0"
   },
