--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "author": "",
   "license": "ISC",
   "_moduleAliases": {
-    "@components": "dist/features",
+    "@features": "dist/features",
     "@core": "dist/core",
     "@domain": "dist/domain"
   },
