refactor: fixed some routing parsing issue and rename match to tennis match so as to align with mobile app

--- a/package.json
+++ b/package.json
@@ -14,11 +14,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "_moduleAliases": {
-    "@features": "dist/features",
-    "@core": "dist/core",
-    "@domain": "dist/domain"
-  },
+  "_moduleAliases": {},
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cookie-session": "^2.0.0",
