--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "express-async-errors": "^3.1.1",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.0",
+    "knex": "^2.5.1",
     "module-alias": "^2.2.3",
+    "pg": "^8.11.1",
+    "pgsql": "^1.0.0",
     "typescript": "^5.1.6",
     "uuid": "^9.0.0"
   },
