--- a/package.json
+++ b/package.json
@@ -24,11 +24,12 @@
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.0",
     "knex": "^2.5.1",
+    "lodash": "^4.17.21",
     "module-alias": "^2.2.3",
     "pg": "^8.11.1",
     "pgsql": "^1.0.0",
     "typescript": "^5.1.6",
-    "uuid": "^9.0.0"
+    "winston": "^3.10.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -36,7 +37,7 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/jsonwebtoken": "^9.0.2",
-    "@types/uuid": "^9.0.2",
+    "@types/lodash": "^4.14.195",
     "jest": "^29.5.0",
     "ts-jest": "^29.1.1",
     "ts-node-dev": "^2.0.0"
