--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "knex": "^2.5.1",
     "lodash": "^4.17.21",
     "module-alias": "^2.2.3",
+    "moment": "^2.29.4",
     "pg": "^8.11.1",
     "pgsql": "^1.0.0",
     "typescript": "^5.1.6",
